--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "ray",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/sean-xiao-zhao7/ray.git"
-  },
-  "author": "Sean",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sean-xiao-zhao7/ray/issues"
-  },
-  "homepage": "https://github.com/sean-xiao-zhao7/ray#readme"
+    "name": "ray",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "watch-sass": "sass --watch style/index.scss style/output/index.css",
+        "compile-css": "sass --no-source-map --style=compressed style/index.scss style/output/index.css",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/sean-xiao-zhao7/ray.git"
+    },
+    "author": "Sean",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/sean-xiao-zhao7/ray/issues"
+    },
+    "homepage": "https://github.com/sean-xiao-zhao7/ray#readme"
 }
